Adding token system based Bearer token

--- a/DatingAppAPI/appsettings.json
+++ b/DatingAppAPI/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Error"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "My secret now iam clever"
 }
