--- a/DatingAppClient/package.json
+++ b/DatingAppClient/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^11.0.2",
